--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,432 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@500&display=swap");
+
+*{
+  margin: 0;
+  padding: 0;
+  outline: none;
+  text-decoration: none;
+  font-family: "Baloo Bhai 2", cursive;
+  box-sizing: border-box;
+}
+body{
+  background-color: black;
+  margin: 0;  
+  padding: 0;
+  line-height: 1.5;
+  font-size: 16px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/***************** NavBar CSS **********************/
+.nav_myname{
+  border-left: 2px solid springgreen;
+  border-top: 2px solid springgreen;
+  padding: 5px 0px 0px 10px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.nav_items{
+  border-right: 2px solid springgreen;
+  border-top: 2px solid springgreen;
+  padding: 10px 0px 0px 0px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/***************** Front page CSS **********************/
+.front_page{
+  display: flex;
+  flex-direction: row;
+  margin-top: 100px;
+  justify-content:space-evenly;
+  align-items:center ;
+  height: 60vh;
+}
+.btn1{
+  color: rgb(0, 0, 0);
+  background-color: rgb(28, 221, 221);
+  margin-right: 10px;
+  /* border: 10px solid red; */
+  /* text-decoration: none; */
+  padding: 2px 10px;
+}
+.front_page_div{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  text-align:start;
+  width: 50%;
+  border-bottom: 2px solid springgreen;
+  border-left: 2px solid springgreen;
+  margin: 0px 0px 0px 0px;
+}
+.front_page_div h1{
+  color: white;
+  margin-left: 20px;
+}
+.front_page_div p{
+  color: white;
+  margin-left: 20px;
+}
+.profile_photo{
+  margin-left:150px;
+  padding: 0px 10px 10px 0px;
+  border-bottom: 2px solid springgreen;
+  border-right: 2px solid springgreen;
+}
+.profile_photo img{
+  width: 200px;
+  border-radius: 50%;
+}
+.front_page_buttons{
+  display: flex;
+  flex-direction: row;
+  margin: 20px;
+}
+.front_page_buttons Button{
+  margin-left: 20px;
+  border: 10px;
+  padding: 4px 10px;
+  background-color:rgb(0 132 132);
+}
+.front_page_buttons Button :hover{
+  background-color: rgb(43, 96, 97);
+  color: black;
+}
+
+/* *******************Projects page css************************ */
+.project_heading{
+  
+  font-size: 30px;
+  font-weight: 600;
+  text-align: center;
+  /* background-color: #cfcfcf; */
+  margin-top: 20px;
+}
+.project_heading p{
+  display: inline-block;
+  padding: 3px 12px;
+  color:#000000;
+  /* border: 2px solid; */
+  border-radius: 20px;
+  background-color:rgb(28, 221, 221);
+}
+.card_main{
+  display: inline-block;
+  /* margin: 25px; */
+  padding: 25px;
+  /* background-color: aquamarine; */
+}
+.card_sub_main{ 
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    /* margin-right: 20px; */
+    /* background-color: #04aa6d; */
+    justify-content: center;
+}
+.card_body{
+  background-color: rgb(1, 0, 0);
+  width: 450px;
+  height: max-content;
+  border: 2px solid yellow;
+  border-radius: 20px;
+  margin-bottom: 50px;
+  margin-right: 20px;
+}
+.card_inner{
+  display: flex;
+  flex-direction: column;
+}
+.project_title {
+  margin-top: 10px;
+  margin-left: 30px;
+  /* text-align: center; */
+  color: #a3ffc1;
+  font-weight: 600;
+  font-size: 20px;
+}
+.card_image img{
+  border-radius: 10px;
+  width: 400px;
+  height: 250px;
+  margin-bottom: 10px;
+}
+.project_description{
+  height: 100px;
+  /* word-break: break-all  ; */
+  word-wrap: break-word;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.technologies{
+  color: white;
+  
+}
+.card_buttons {
+  display: flex;
+  justify-content:right;
+  margin-bottom: 20px;
+  margin-right: 25px; 
+}
+.card_buttons button a{
+  border: 10px;
+  margin-right: 20px;
+  border-radius: 5px;
+  text-decoration: none;
+  color: aquamarine;
+  padding: 4px 10px;
+  background-color: rgb(20, 50, 50);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* *********************Contact Form CSS******************************* */
+.contact_main{
+  display: flex;
+  flex-direction: column;;
+}
+.contact_heading {
+  font-size: 3rem;
+  font-weight: bold;
+  color: #04aa6d;
+  margin-top: 18px;
+}
+.field {
+  display: flex;
+  flex-direction: column;
+}
+.field input, .select_option, .textarea_messege,.select_option option{
+  background-color: #293732;
+}
+.contact_form {
+  display: inline-flex;
+  width: 100%;
+  height: 74vh;
+  flex-direction: column;
+  align-items: center;
+}
+.btn_submit {
+  margin: 0px 27px;
+  background-color: #04aa6d;
+  color: white;
+  border-radius: 30px;
+  padding: 0px 10px;
+  font-size: 20px;
+  font-weight: 500;
+  height: 33px;
+}
+.btn_submit:hover {
+  background-color: rgb(203, 255, 14);
+  color: black;
+  font-weight: bold;
+}
+.label {
+  margin: 0px 10px;
+  padding: 0px 17px;
+  font-weight: bold;
+  color: #625b25;
+}
+.label::after {
+  content: " *";
+  color: red;
+}
+.textarea {
+  width: 470px;
+  padding: 3px 15px;
+  margin: 3px 15px;
+  margin-bottom: 13px;
+}
+
+.select_option {
+  width: 250px;
+  padding: 3px 15px;
+  margin: 3px 15px;
+  margin-bottom: 20px;
+  border-radius: 10px;
+}
+.textarea_messege {
+  width: 470px;
+  height: 130px;
+  padding: 3px 5px;
+  margin: 3px 15px;
+
+  border-radius: 10px;
+  margin-bottom: 20px;
+}
+.reachout{
+  display: flex;
+  flex-direction: row ;
+  width: fit-content;
+  justify-content: center;
+  align-self: center;
+  border-bottom: 2px solid springgreen;
+  box-shadow: 0px 0px 14px 2px springgreen;
+  margin-bottom: 50px;
+}
+.reachout div{
+  margin: 10px 20px;
+  font-size: 20px;
+}
+.reach_out_text{
+  color: #258f68;
+  font-size: 20px;
+}
+.reachout div a{
+  
+  color: #258f68;
+
+}
+
+
+/* ***************** About Page ********************* */
+
+
+
+
+
+.main_about {
+  display: grid; 
+  grid-template-rows: 1.5fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  gap: 0px;
+  height: 100%;
+  
+}
+#myself {
+  background-color: #6BD675; 
+  grid-row-start: 1;
+  grid-column-start: 1;
+  grid-row-end: 2;
+  grid-column-end: 4;
+  margin: 10px 50px;
+  border: 2px solid black;
+  border-radius: 10px;
+}
+#education {
+  display: flex;
+  justify-content: center;
+  background-color: #19b655; 
+  grid-row-start: 1;
+  grid-column-start: 4;
+  grid-row-end: 3;
+  grid-column-end: 6;
+  margin-top: 50px;
+  padding: 10px;
+  border: 2px solid black;
+  border-radius: 10px;
+  margin-right: 50px;
+}
+#internship {
+  background-color: #E7C5DE; 
+  grid-row-start: 2;
+  grid-column-start: 1;
+  grid-row-end: 4;
+  grid-column-end: 4;
+  margin: 10px 100px;
+  margin-bottom: 100px;
+  border: 2px solid black;
+  border-radius: 10px;
+}
+#achievements_main {
+  background-color: #c68ed0; 
+  grid-row-start: 3;
+  grid-column-start: 4;
+  grid-row-end: 4;
+  grid-column-end: 6;
+  margin-right: 50px;
+  margin-top: 20px;
+  border: 2px solid black;
+  border-radius: 10px;
+}
+.me_section{
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 10px 10px;
+}
+.myself_heading ,.internships_heading,.achievements_heading,.education_heading{
+  /* text-decoration: dashed; */
+  margin: 0px 50px;
+  font-size: 3rem;
+  font-weight: bold;
+}
+.myself_para{
+  font-size: 1rem;
+  justify-self: center;
+  margin: 0px 100px;
+  /* margin-left: 50px; */
+}
+.resume{
+  margin: 0px 100px;
+}
+.resume_btn{
+  -webkit-font-smoothing: antialiased;
+  background-color: #c2fbd7;
+  border-radius: 100px;
+  box-shadow: rgba(44, 187, 99, .2) 0 -25px 18px -14px inset,rgba(44, 187, 99, .15) 0 1px 2px,rgba(44, 187, 99, .15) 0 2px 4px,rgba(44, 187, 99, .15) 0 4px 8px,rgba(44, 187, 99, .15) 0 8px 16px,rgba(44, 187, 99, .15) 0 16px 32px;
+  color: green;
+  cursor: pointer;
+  display: inline-block;
+  font-family: CerebriSans-Regular,-apple-system,system-ui,Roboto,sans-serif;
+  padding: 7px 20px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 250ms;
+  border: 0;
+  font-size: 16px;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  margin: 0px 10px;
+  
+}
+.resume_btn:hover{
+  box-shadow: rgba(44, 187, 99, .35) 0 -25px 18px -14px inset,rgba(44, 187, 99, .25) 0 1px 2px,rgba(44, 187, 99, .25) 0 2px 4px,rgba(44, 187, 99, .25) 0 4px 8px,rgba(44, 187, 99, .25) 0 8px 16px,rgba(44, 187, 99, .25) 0 16px 32px;
+  transform: scale(1.05) rotate(-1deg);
+  color: green;
+}
+.expr{
+  display: flex;
+  flex-direction: column;
+}
+.internship_detail{
+  display: flex;
+  flex-direction: column;
+  margin: 0px 50px;
+  /* background-color: #ffa6a6; */
+  padding: 10px 10px;
+}
+.pos{
+  font-size: 20px;
+  /* position: absolute; */
+  /* padding: 0px 10px; */
+  font-weight: bold;
+  /* background-color: #01815a; */
+}
+.company_name{
+  font-size: 20px;
+  /* font-weight: bold; */
+}
+.tasks ul{
+  list-style:decimal;
+}
+.tasks div p{
+  font-size: 20px;
+  font-style: italic;
+}
+.achievement_detail{
+  margin: 0px 50px;
+}
+.achievement_detail ul{
+  list-style:disc;
+  font-size: 20px;
+  font-weight: bold;
+  color:#ffffff;
+}
+.degree{
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  background-color: #2c4426;
+  margin-bottom: 40px;
+  padding: 10px;
+  border: 2px solid rgb(255, 255, 255);
+  border-radius: 20px;
+}
+.edu_title p, .college_name p, .percent p {
+  display: inline-block;
+  color: white;
+  /* background-color: #01815a; */
+  padding: 0px 10px;
+  margin-bottom: 7px;
 }
